# monitoramento-remoto-univesp-esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  cert.pem  idf_component.yml  mqtt.c  mqtt.h  sistema-vacinas-esp32.c  temp.c  temp.h  wifi.c  wifi.h
main/tests/: test.c
